# rkllama

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  router-publish.yml
config/: default.ini
converter/: .gitignore  README.md  converter.py  pyproject.toml  requirements.txt
converter/src/: converter.py  quantization.py  rkllm.py
converter/src/rkllama_converter/: __init__.py  cli.py  converter.py  device.py  modelfile.py  rkllm.py  utils.py
converter/tests/: __init__.py  conftest.py
converter/tests/integration/: __init__.py
converter/tests/unit/: __init__.py  test_cli.py  test_device.py  test_modelfile.py
documentation/: configuration.md  french.md
documentation/Guide/en/: Rebuild-arch.md
documentation/Guide/fr/: Rebuild-arch.md
documentation/api/: english.md  french.md  model_naming.md  ollama-compatibility.md  tools.md
documentation/converter/: cli-reference.md  index.md  installation.md
k8s-example/: README.md  daemonset.yml  deployment.yml  example.yaml  ingress.yml  kustomization.yml  pv.yml  service.yml
k8s-example/router/: configmap.yml  deployment.yml  ingress.yml  kustomization.yml  role.yml  rolebinding.yml  service.yml  serviceaccount.yml
models/: readme.md
router/: Dockerfile  README.md  go.mod
router/cmd/router/: main.go
router/deploy/: configmap.yaml  kustomization.yaml  service-pods.yaml
router/internal/discovery/: pods.go
router/internal/proxy/: handler.go
router/internal/reconciler/: reconciler.go
src/rkllama/: __init__.py  logging.py  telemetry.py
src/rkllama.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rkllama/api/: __init__.py  callback.py  classes.py  debug_utils.py  format_utils.py  image_generator.py  model_utils.py  process.py  rkllm.py  rknnlite.py  server_utils.py  stt.py  tts.py  variables.py  worker.py
src/rkllama/api/models/audio/: mms_tts.py  omniasr.py  piper.py  whisper.py
src/rkllama/api/schemas/: __init__.py  common.py  modelfile.py  native.py  ollama.py  openai.py
src/rkllama/client/: client.py
src/rkllama/config/: config.env  config.py  config_schema.py
src/rkllama/config/config/: config.env  default.ini
src/rkllama/lib/: fix_freq_rk3576.sh
src/rkllama/pull/: __init__.py  base.py  huggingface.py  s3.py  url.py
src/rkllama/server/: __init__.py  app.py  dependencies.py  server.py
src/rkllama/server/routers/: __init__.py  modelfile.py  native.py  ollama.py  openai.py
tests/: __init__.py  conftest.py  test_rknn2model_inputs.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_modelfile_api.py  test_ollama_api.py  test_openai_api.py
tests/unit/: __init__.py  test_config.py  test_config_schema.py  test_schemas.py
