[project]
name = "rkllama-converter"
version = "1.2.3-3"
description = "Convert HuggingFace models to RKLLM format for Rockchip NPU"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RKLlama Contributors" }]
keywords = ["rkllm", "rockchip", "npu", "llm", "model-conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.38.2",
    "numpy>=1.25.2",
    "tqdm>=4.66.2",
    "safetensors>=0.4.1",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.2",
    "tokenizers>=0.15.2",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "huggingface-hub>=0.26.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.2.0",
    "rkllm-toolkit>=1.2.3 ; python_version >= '3.10' and python_version < '3.13' and sys_platform == 'linux'",
]
rocm = [
    "torch>=2.2.0",
    "rkllm-toolkit>=1.2.3 ; python_version >= '3.10' and python_version < '3.13' and sys_platform == 'linux'",
]
cpu = [
    "torch>=2.2.0",
    "rkllm-toolkit>=1.2.3 ; python_version >= '3.10' and python_version < '3.13' and sys_platform == 'linux'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

# Exclude auto-gptq (requires CUDA to build, not actually used by rkllm)
[tool.uv]
override-dependencies = [
    "auto-gptq ; sys_platform == 'never'",
]

# RKLLM toolkit from local wheels (x86_64 Linux only)
[tool.uv.sources]
rkllm-toolkit = [
    { path = "lib/rkllm_toolkit-1.2.3-cp312-cp312-linux_x86_64.whl", marker = "python_version == '3.12'" },
    { path = "lib/rkllm_toolkit-1.2.3-cp311-cp311-linux_x86_64.whl", marker = "python_version == '3.11'" },
    { path = "lib/rkllm_toolkit-1.2.3-cp310-cp310-linux_x86_64.whl", marker = "python_version == '3.10'" },
]

# PyTorch indexes - select at install time with --index flag
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm62"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
rkllama-convert = "rkllama_converter.cli:app"

[project.urls]
Homepage = "https://github.com/notpunchnox/rkllama"
Documentation = "https://github.com/notpunchnox/rkllama/tree/main/documentation/converter"
Repository = "https://github.com/notpunchnox/rkllama"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/rkllama_converter"]
branch = true
